--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,8 @@
 			| Settings
 			|
 			= current_user.id
+			|
+			= link_to "Pending reviews", user_demands_path(current_user)
 	
 		%h1 Testify!
 	
