--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,8 @@
 		%title= site_name
 		= stylesheet_link_tag 'typography'
 		= stylesheet_link_tag 'forms'
+		= stylesheet_link_tag 'style'
+		= javascript_include_tag :defaults
 	%body
 	
 		-	if logged_in?
@@ -30,3 +32,5 @@
 			=	content_tag :div, message, :class => key
 		
 		=	yield
+		
+		= render :partial => 'shared/footer'
