--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -1,12 +1,32 @@
 %li
-	- unless review.name_hidden?
-		Name:
-		= review.name
-	- unless review.company_hidden?
+	- if current_user != @user && !review.name_hidden?
+		%span{:id => "name_#{review.id}"}
+			Name:
+			= review.name
 		%br
-		Company:
-		= review.company
-	%br
+	- elsif current_user == @user && review.name_hidden?
+		%span{:id => "name_#{review.id}"}
+			= render :partial => 'reviews/name_greyed', :locals => { :review => review }
+		%br
+	- elsif current_user == @user && !review.name_hidden?
+		%span{:id => "name_#{review.id}"}
+			= render :partial => 'reviews/name', :locals => { :review => review }
+		%br
+		
+	- if current_user != @user && !review.company_hidden?
+		%span{:id => "company_#{review.id}"}
+			Name:
+			= review.company
+		%br
+	- elsif current_user == @user && review.company_hidden?
+		%span{:id => "company_#{review.id}"}
+			= render :partial => 'reviews/company_greyed', :locals => { :review => review }
+		%br
+	- elsif current_user == @user && !review.company_hidden?
+		%span{:id => "company_#{review.id}"}
+			= render :partial => 'reviews/company', :locals => { :review => review }
+		%br
+
 	Project:
 	= review.work
 	%br
