Email is now optional, can be requested from pending demands, if pending demands empty error shown

--- a/app/views/demands/_demand.html.haml
+++ b/app/views/demands/_demand.html.haml
@@ -6,3 +6,6 @@
 	= demand.company
 	%br
 	= demand.work
+	%br
+	%span{:id => "reminder_link_#{demand.id}"}
+		= link_to_remote "Send an email reminder", :url => { :controller => 'demands', :action => 'send_email', :id => demand.id }
