--- a/app/views/demands/create.html.haml
+++ b/app/views/demands/create.html.haml
@@ -8,6 +8,11 @@
 	The unique URL for this review (that you can send to your client) is:
 	= link_to "http://testify.thecouriernew.com/go/#{@demand.code}", "http://testify.thecouriernew.com/go/#{@demand.code}"
 	
+-if @demand.send_email.to_i == 1
+	%p
+		An email notification has been sent to 
+		= @demand.email
+		
 %p
 	= link_to "Return to profile", user_path(@demand.user)
 	|
