--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -18,5 +18,5 @@
     
 	= f.submit "Update", :id => 'save_button'
   
-= link_to 'Cancel', { :controller => 'pages', :action => 'index' }, :id => 'cancel_link'
+= link_to 'Cancel', user_path(@user), :id => 'cancel_link'
 
