--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,41 @@
 a {
 	text-decoration: none;
 }
+
+body {
+	background-color: #eee;
+}
+
+#page {
+	width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#content {
+	background-color: #fff;
+	border: 2px solid #bbb;
+	padding: 10px;
+	padding-bottom: 0px;
+}
+
+#footer {
+	margin-top: 10px;
+}
+
+li {
+ list-style-type: none;
+ background-color: #ffd;
+ border: 2px solid #ffb;
+ padding: 5px;
+ width: 562px;
+ margin-top: 10px;
+}
+
+ul#reviews {
+	margin-left: -40px;
+}
+
+ul#demands {
+	margin-left: -40px;
+}
