--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,4 @@
--	form_for(@user) do |f|
+-	form_for(@user, :html => { :multipart => true }) do |f|
 	= f.error_messages
 	%p
 		= f.label :name
@@ -12,7 +12,7 @@
 		= f.label :email
 		%br
 		= f.text_field :email
-	%p
+	%p.divider
 		= f.label :password, 'Password'
 		%br
 		= f.password_field :password
@@ -20,6 +20,10 @@
 		= f.label :password_confirmation, 'Confirm Password'
 		%br
 		= f.password_field :password_confirmation
+	%p.divider
+		= f.label :logo, 'Upload an image or logo'
+		%br
+		= f.file_field :logo
 	%p
 		= f.submit "Sign up", :id => 'save_button'
 		= link_to 'Cancel', { :controller => 'pages', :action => 'index' }, :id => 'cancel_link'
