--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ a {
 }
 
 body {
-	background-color: #eee;
+	background-color: #fafafa;
 }
 
 #page {
@@ -18,28 +18,46 @@ body {
 
 #content {
 	background-color: #fff;
-	border: 2px solid #bbb;
+	border: 2px solid #ddd;
 	padding: 10px;
 	padding-bottom: 0px;
 }
 
 #footer {
 	margin-top: 10px;
+	margin-left: 12px;
 }
 
 li {
  list-style-type: none;
  background-color: #ffd;
- border: 2px solid #ffb;
+ border: 2px solid #ffa;
  padding: 5px;
  width: 562px;
  margin-top: 10px;
 }
 
 ul#reviews {
+	margin-top: 55px;
 	margin-left: -40px;
 }
 
 ul#demands {
+	margin-top: 55px;
 	margin-left: -40px;
+}
+
+h4#pending_reviews {
+	float: left;
+	margin-top: -10px;
+}
+
+.divider {
+	border-top: 1px #ccc solid;
+	padding-top: 10px;
+}
+
+#logo {
+	float: right;
+	border: 2px #eee solid;
 }
