--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,30 +1,41 @@
+%h3 Sign up
+
 -	form_for(@user, :html => { :multipart => true }) do |f|
 	= f.error_messages
 	%p
 		= f.label :name
+		%span.compulsory *
 		%br
 		= f.text_field :name
 	%p
 		= f.label :handle, 'Choose your unique URL'
+		%span.compulsory *
 		%br
 		= f.text_field :handle
 	%p
 		= f.label :email
+		%span.compulsory *
 		%br
 		= f.text_field :email
 	%p.divider
 		= f.label :password, 'Password'
+		%span.compulsory *
 		%br
 		= f.password_field :password
 	%p
 		= f.label :password_confirmation, 'Confirm Password'
+		%span.compulsory *
 		%br
 		= f.password_field :password_confirmation
 	%p.divider
 		= f.label :logo, 'Upload an image or logo'
+		%span.compulsory *
 		%br
 		= f.file_field :logo
 	%p
 		= f.submit "Sign up", :id => 'save_button'
 		= link_to 'Cancel', { :controller => 'pages', :action => 'index' }, :id => 'cancel_link'
+	%p
+		%span.compulsory *
+		Required field
 
