Added #message and hook for new users. Closed beta. Email address requests. Order reviews by ratings. Updated ratings to be worded not 1..10 and use radio buttons. Display user averages. Send email checkbox default true. Notice on reviews#new explaining it's public.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,9 +27,11 @@
 				= link_to "Sign up", signup_path
 
 			%h1 Testify!
-	
+			
 			-	flash.each do |key, message|
 				=	content_tag :div, message, :class => key
+				
+			= yield :message
 		
 			#content
 		
