--- a/app/views/reviews/_company_greyed.html.haml
+++ b/app/views/reviews/_company_greyed.html.haml
@@ -1,4 +1,4 @@
 %span#greyed
-	Company:
+	%span.bold Company:
 	= review.company
 = link_to_remote "unhide", :url => { :controller => 'reviews', :action => 'unhide_company', :id => review.id }
