--- a/app/views/reviews/_name.html.haml
+++ b/app/views/reviews/_name.html.haml
@@ -1,3 +1,3 @@
-Name:
+%span.bold Name:
 = review.name
 = link_to_remote "hide", :url => { :controller => 'reviews', :action => 'hide_name', :id => review.id }
