--- a/app/views/reviews/_name_greyed.html.haml
+++ b/app/views/reviews/_name_greyed.html.haml
@@ -1,4 +1,4 @@
 %span#greyed
-	Name:
+	%span.bold Name:
 	= review.name
 = link_to_remote "unhide", :url => { :controller => 'reviews', :action => 'unhide_name', :id => review.id }
