--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+h1 {
+	margin-left: 12px;
+}
+
 #greyed {
 	color: #aaa;
 }
@@ -17,10 +21,11 @@ body {
 }
 
 #content {
+	margin-top: 10px;
 	background-color: #fff;
 	border: 2px solid #ddd;
 	padding: 10px;
-	padding-bottom: 0px;
+	padding-bottom: 10px;
 }
 
 #footer {
@@ -38,12 +43,12 @@ li {
 }
 
 ul#reviews {
-	margin-top: 55px;
+	margin-top: 20px;
 	margin-left: -40px;
 }
 
 ul#demands {
-	margin-top: 55px;
+	margin-top: 20px;
 	margin-left: -40px;
 }
 
@@ -64,4 +69,69 @@ h4#pending_reviews {
 
 .compulsory {
 	color: #8a1f11;
+}
+
+#averages {
+	border: 2px solid #C6D880;
+	background-color: #E6EFC2;
+	color: #264409;
+	padding: 5px;
+	font-size: 14px;
+	line-height: 18px;
+	margin-top: 54px;
+}
+
+#averages h4 {
+	margin-top: 0px;
+}
+
+#email_form {
+  background-color: #ffd;
+  border: 2px solid #ffa;
+	padding: 2px 10px 0px 10px;
+	margin-top: 10px;
+	font-size: 14px;
+}
+
+#email_form p {
+	margin-top: 10px;
+}
+
+#email_form h4 {
+	line-height: 28px;
+	margin: 0;
+	font-weight: bold;
+}
+
+#message {
+	background: #C5DCF6;
+	border: 2px solid #8299B3;
+	color: #1F2A34;
+	padding: 2px 10px 10px 10px;
+	margin-top: 10px;
+	font-size: 14px;
+}
+
+#message h4 {
+	color: #000;
+	margin: 0;
+	font-size: 18px;
+	line-height: 28px;
+	padding-bottom: 10px;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.italic {
+	font-style: italic;
+}
+
+.review {
+	padding: 0;
+	margin-top: 20px;
+	line-height: 0;
+	font-size: 14px;
+	font-weight: bold;
 }
