--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,8 @@
 				Testify helps you find what they 
 				%span.italic really 
 				thought.
-			Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential. 
+			Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential and get more business.
+			= link_to 'Find out more &raquo;', welcome_path 
 
 = image_tag @user.logo.url(:thumb), :id => 'logo'
 
