--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,13 @@
+- if !logged_in?
+	- content_for :message do
+		#message
+			%h4
+				Testify helps you find what they 
+				%span.italic really 
+				thought.
+			Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential and get more business.
+			= link_to 'Find out more &raquo;', welcome_path
+
 %h3 Sign up
 
 -	form_for(@user, :html => { :multipart => true }) do |f|
