UI tweaks, styled nav, welcome page, messages, and prompts, improved flow

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,6 +1,26 @@
-%h2 Welcome!
+%h2
+	Find out what they
+	%span.italic really 
+	thought.
 
-Do something...
+.important#elevator
+	Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential and close more deals.
+
+#message
+	%h4 Sorry, we're in closed beta.
+	But don't be disheartened; we'll be ready for you soon. If you give us your email address in the form below, we'll let you know as soon as we're on our feet.
+
+.information
+	%h3 Boost your reputation
+	With great testimonials from the people you've worked with, you can demonstrate how good you really are. As you build up a profile, this valuable source of reviews ensures your potential customers will choose you.
+
+.information
+	%h3 Increase your business
+	Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients. Impress them with your ratings and reviews, all obtained from your previous works, then blow them away with your happy customers and comments.
+
+.information
+	%h3 Enhance your service
+	Uncovered a problem? When you know what your customers think of you, it's easy to fix things that aren't quite as good as they could be. With feedback from people relevant to you, you can improve the quality of your service, whenever you need to.
 
 #email_form
 	-	form_for(@email) do |f|
