--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,20 +11,11 @@
 		
 		#page
 			-	if logged_in?
-				= link_to "Request feedback", :controller => 'demands', :action => 'new'
-				| Get a badge
-				| 
-				= link_to "Profile", user_path(current_user)
-				| 
-				= link_to 'Settings', edit_user_path(current_user)
-				|
-				= link_to "Pending reviews", user_demands_path(current_user)
-				|
-				= link_to "Log out", logout_path
+				= render :partial => 'shared/navigation'
 			- else
-				= link_to "Log in", login_path
-				|
-				= link_to "Sign up", signup_path
+				%ul#navigation
+					%li= link_to "Log in", login_path
+					%li#last= link_to "Sign up", signup_path
 
 			%h1 Testify!
 			
