--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,7 @@ h1 {
 
 a {
 	text-decoration: none;
+	color: #1F2A34;
 }
 
 body {
@@ -40,6 +41,30 @@ li {
  padding: 5px;
  width: 562px;
  margin-top: 10px;
+}
+
+ul#navigation li {
+	display: inline;
+	background: none;
+	border: none;
+	border-right: 3px #ddd double;
+	font-size: 14px;
+	height: 14px;
+	line-height: 14px;
+	padding: 0 4px 0 4px;
+	width: auto;
+}
+
+ul#navigation li#last {
+	border-right: none;
+}
+
+ul#navigation {
+	margin-left: -28px;
+}
+
+ul#navigation li a:hover {
+	color: #64001C;
 }
 
 ul#reviews {
@@ -89,7 +114,7 @@ h4#pending_reviews {
   background-color: #ffd;
   border: 2px solid #ffa;
 	padding: 2px 10px 0px 10px;
-	margin-top: 10px;
+	margin-top: 20px;
 	font-size: 14px;
 }
 
@@ -120,6 +145,11 @@ h4#pending_reviews {
 	padding-bottom: 10px;
 }
 
+#message a {
+	color: #64001C;
+	text-decoration: underline;
+}
+
 .bold {
 	font-weight: bold;
 }
@@ -128,10 +158,24 @@ h4#pending_reviews {
 	font-style: italic;
 }
 
-.review {
+.important {
 	padding: 0;
 	margin-top: 20px;
-	line-height: 0;
+	line-height: 20px;
 	font-size: 14px;
 	font-weight: bold;
 }
+
+.information {
+	padding: 0;
+	margin-top: 25px;
+	line-height: 20px;
+	font-size: 14px;
+}
+
+.information h3 {
+	line-height: 0;
+	margin: 0;
+	padding-bottom:	22px;
+}
+
