--- a/app/views/demands/create.html.haml
+++ b/app/views/demands/create.html.haml
@@ -4,8 +4,9 @@
 	of 
 	= @demand.company
 
-%p
+%p.important
 	The unique URL for this review (that you can send to your client) is:
+	%br
 	= link_to "http://testify.thecouriernew.com/go/#{@demand.code}", "http://testify.thecouriernew.com/go/#{@demand.code}"
 	
 -if @demand.send_email.to_i == 1
