--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,3 +179,10 @@ h4#pending_reviews {
 	padding-bottom:	22px;
 }
 
+#errorExplanation ul li {
+	background: none;
+	border: none;
+}
+
+
+#errorExplanation { background: #FBE3E4; color: #8a1f11; border-color: #FBC2C4; }
