--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,7 +182,27 @@ h4#pending_reviews {
 #errorExplanation ul li {
 	background: none;
 	border: none;
+	margin-left: -40px;
 }
 
+#errorExplanation {
+background: #FBE3E4;
+color: #8a1f11;
+border: 2px solid #FBC2C4;
+padding: 5px;
+}
 
-#errorExplanation { background: #FBE3E4; color: #8a1f11; border-color: #FBC2C4; }
+.fieldWithErrors label {
+	color: #8a1f11;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;
+}
+
+.fieldWithErrors {
+	padding: 0;
+	margin: 0;
+	height: auto;
+	width: auto;
+	border: none;
+}
