--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,7 +13,7 @@
 			%h4 Welcome to Testify!
 			Thanks for signing up. You're now ready to get testimonials from your clients, and build a profile of awesome feedback. To get started,
 			= link_to 'request feedback.', new_user_demand_path(current_user)
-= image_tag @user.logo.url(:thumb), :id => 'logo'
+= image_tag @user.logo.url(:small), :id => 'logo'
 
 %h3= @user.name
 
