--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 #testify_logo {
 	margin-left: 12px;
+	padding-bottom: 15px;
 }
 
 #greyed {
@@ -73,7 +74,7 @@ ul#reviews {
 }
 
 ul#demands {
-	margin-top: 55px;
+	margin-top: 100px;
 	margin-left: -40px;
 }
 
@@ -107,7 +108,8 @@ h4#pending_reviews {
 	padding: 5px;
 	font-size: 14px;
 	line-height: 18px;
-	margin-top: 54px;
+	margin-top: 100px;
+	f
 }
 
 #averages h4 {
