--- a/app/views/demands/new.html.haml
+++ b/app/views/demands/new.html.haml
@@ -1,6 +1,7 @@
 %h3 Request feedback
 
 -	form_for([current_user, @demand]) do |f|
+	= f.error_messages :header_message => "Oops! There's been a bit of a problem.", :header_tag => 'h3', :message => "We had some problems with the following fields:"
 	%p
 		= f.label :name 
 		%br
