--- a/app/views/reviews/new.html.haml
+++ b/app/views/reviews/new.html.haml
@@ -14,6 +14,7 @@
 	=	@demand.work.capitalize
 
 -	form_for([@demand.user, @review]) do |f|
+	= f.error_messages :header_message => "Oops! There's been a bit of a problem.", :header_tag => 'h3', :message => "We had some problems with the following fields:"
 	%p
 		= f.label :body, 'Review'
 		%br
