--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,7 @@
 %h3 Account settings
 
 -	form_for(@user, :html => { :multipart => true }) do |f|
+	= f.error_messages :header_message => "Oops! There's been a bit of a problem.", :header_tag => 'h3', :message => "We had some problems with the following fields:"
 	%p
 		= f.label :name
 		%br
