--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -22,6 +22,7 @@ input.text, input.title,
 textarea, select { 
   background-color:#fff; 
   border:1px solid #bbb; 
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 input[type=text]:focus, input[type=password]:focus,
 input.text:focus, input.title:focus, 
