--- a/app/views/reviews/_name.html.haml
+++ b/app/views/reviews/_name.html.haml
@@ -1,3 +1,2 @@
-%span.bold Name:
-= review.name
+%span.bold= review.name
 = link_to_remote "hide", :url => { :controller => 'reviews', :action => 'hide_name', :id => review.id }
