--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,33 +1,37 @@
+
+-#.important#elevator
 %h2
-	Find out what they
-	%span.italic really 
-	thought.
+	Testify helps you win more business and improve your service, simply by collecting testimonials from your clients. 
 
-.important#elevator
-	Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential and close more deals.
+-#	With Testify you can collect testimonials from clients. close more deals.
+-#  Testify is the new platform to get your customer's opinions. By collecting short &amp; simple testimonials from your previous clients, you can improve your service, and use your reviews to prove your potential and close more deals.
 
-#message
-	%h4 Sorry, we're in closed beta.
-	But don't be disheartened; we'll be ready for you soon. If you give us your email address in the form below, we'll let you know as soon as we're on our feet.
-
-.information
-	%h3 Boost your reputation
-	With great testimonials from the people you've worked with, you can demonstrate how good you really are. As you build up a profile, this valuable source of reviews ensures your potential customers will choose you.
-
-.information
-	%h3 Increase your business
-	Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients. Impress them with your ratings and reviews, all obtained from your previous works, then blow them away with your happy customers and comments.
-
-.information
-	%h3 Enhance your service
-	Uncovered a problem? When you know what your customers think of you, it's easy to fix things that aren't quite as good as they could be. With feedback from people relevant to you, you can improve the quality of your service, whenever you need to.
 
 #email_form
+	%h4 We're in closed beta!
 	-	form_for(@email) do |f|
 		- f.error_messages
-		%h4 Find out more!
-		Since we're still in closed beta for the moment, enter your email address below and we'll keep you in the loop. We won't spam or give out your information, and you'll only get one email from us, to let you know that Testify is ready to launch. That's a Promise.
+		Enter your email address below to recieve one email when we launch.
 		%p
 			= f.label :address, 'Email address:'
 			= f.text_field :address		
 			= f.submit 'Submit'
+			%br
+			%small
+				We won't spam you - promise!
+
+
+%h3#subtagline Here's how Testify can help you:
+
+.information
+	%h3 1. Boost your reputation
+	With great testimonials from the people you've worked with, you can demonstrate how good you really are. As you build up a profile, this valuable source of reviews ensures your potential customers will choose you.
+
+.information
+	%h3 2. Increase your business
+	Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients. Impress them with your ratings and reviews, all obtained from your previous works, then blow them away with your happy customers and comments.
+
+.information
+	%h3 3. Enhance your service
+	Uncovered a problem? When you know what your customers think of you, it's easy to fix things that aren't quite as good as they could be. With feedback from people relevant to you, you can improve the quality of your service, whenever you need to.
+
