--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -111,6 +111,7 @@ h4#pending_reviews {
 	background-color: #E6EFC2;
 	color: #264409;
 	padding: 5px;
+	float: left;
 	font-size: 14px;
 	line-height: 18px;
 	margin-top: 115px;
@@ -121,8 +122,9 @@ h4#pending_reviews {
 }
 
 #email_form {
-  background-color: #ffd;
-  border: 2px solid #ffa;
+	background: #C5DCF6;
+	border: 2px solid #8299B3;
+	color: #1F2A34;
 	padding: 2px 10px 0px 10px;
 	margin-top: 20px;
 	font-size: 14px;
@@ -229,3 +231,14 @@ background: #FBE3E4; color: #8a1f11; border-color: #FBC2C4;
 	color: #64001C;
 	text-decoration: underline;
 }
+
+#subtagline {
+	font-size: 20px;
+
+}
+
+ul#navigation #login {
+	border-right: none;
+	float: right;
+}
+
