--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,6 +18,8 @@
 %h3= @user.name
 
 #averages
+	%h4 Average ratings
+	%br
 	Time management:
 	%span.bold= @user.ratings_options.at(@user.time_management_mean.round)
 	%br
