Changed introdtory text on profile

--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -26,6 +26,9 @@
 	%p.important
 		= review.body
 	%br
+	%span.bold Ratings
+	%br
+	%br
 	Value for money:
 	%span.bold= "#{review.value_for_money}/5"
 	%br
