--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,10 @@ a {
 	color: #1F2A34;
 }
 
+#big_name {
+	display: inline;
+}
+
 body {
 	background-color: #fafafa;
 }
@@ -39,10 +43,10 @@ body {
 li {
  list-style-type: none;
  background-color: #ffd;
- border: 2px solid #ffa;
+ border: solid 2px #FFE98F;
  padding: 5px;
  width: 562px;
- margin-top: 10px;
+ margin-top: 20px;
 }
 
 ul#navigation li {
@@ -70,7 +74,7 @@ ul#navigation li a:hover {
 }
 
 ul#reviews {
-	margin-top: 138px;
+	margin-top: 158px;
 	margin-left: -40px;
 }
 
