more textual rubbish

--- a/app/views/demands/new.html.haml
+++ b/app/views/demands/new.html.haml
@@ -15,7 +15,7 @@
 		%br
 		= f.text_field :company
 	%p
-		= f.label :work, 'Job description'
+		= f.label :work, 'Project description'
 		%br
 		= f.text_field :work
 	%p
