--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,7 +9,8 @@
 
 %h3#big_name= @user.name
 %br
-Is using Testify to more business and improve your service, simply by collecting the following testimonials.
+%br
+Is using Testify to win more business and improve their service, simply by collecting the following testimonials.
 %br
 %br
 
