Fixed choose unique url

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -18,7 +18,7 @@
 		%br
 		= f.text_field :name
 	%p
-		= f.label :handle, 'Choose your unique URL'
+		= f.label :handle, 'Username (your profile will appear at http://testifyapp.com/username )'
 		%span.compulsory *
 		%br
 		= f.text_field :handle
