Add 1 to each rating

--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -30,14 +30,14 @@
 	%br
 	%br
 	Value for money:
-	%span.bold= "#{review.value_for_money}/5"
+	%span.bold= "#{review.value_for_money + 1}/5"
 	%br
 	Time management:
-	%span.bold= "#{review.time_management}/5"
+	%span.bold= "#{review.time_management + 1}/5"
 	%br
 	Customer service:
-	%span.bold= "#{review.customer_service}/5"
+	%span.bold= "#{review.customer_service + 1}/5"
 	%br
 	Overall quality:
-	%span.bold= "#{review.quality_of_service}/5"
+	%span.bold= "#{review.quality_of_service + 1}/5"
 
