added br to users/show#14

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,7 +10,9 @@
 %h3#big_name= @user.name
 %br
 %br
-Is using Testify to win more business and improve their service, simply by collecting the following testimonials.
+Is using Testify to win more business and improve their service,
+%br
+simply by collecting the following testimonials.
 %br
 %br
 
