--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,20 +16,21 @@ simply by collecting the following testimonials.
 %br
 %br
 
-#averages
-	%h4 Average ratings
-	%br
-	Time management:
-	%span.bold= @user.ratings_options.at(@user.time_management_mean.round)
-	%br
-	Customer service: 
-	%span.bold= @user.ratings_options.at(@user.customer_service_mean.round)
-	%br
-	Value for money: 
-	%span.bold= @user.ratings_options.at(@user.value_for_money_mean.round)
-	%br
-	Overall quality:
-	%span.bold= @user.ratings_options.at(@user.quality_of_service_mean.round)
+- unless @user.reviews.empty?
+	#averages
+		%h4 Average ratings
+		%br
+		Time management:
+		%span.bold= @user.ratings_options.at(@user.time_management_mean.round)
+		%br
+		Customer service: 
+		%span.bold= @user.ratings_options.at(@user.customer_service_mean.round)
+		%br
+		Value for money: 
+		%span.bold= @user.ratings_options.at(@user.value_for_money_mean.round)
+		%br
+		Overall quality:
+		%span.bold= @user.ratings_options.at(@user.quality_of_service_mean.round)
 
 %ul#reviews
 	- if !@reviews.empty?
